--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
   <div class="container">
-    <h1> Speech-to-Text Using Whisper Model </h1>
+    <h1>Speech-to-Text Using Whisper Model</h1>
     <button id="start-button">Start Recording</button>
     <button id="stop-button" disabled>Stop Recording</button>
     <div id="recording-indicator"></div>
-    <h3>Live Transcription - </h3>
-    <div id="transcription"></div>
+    
+    <h3>Live Transcription</h3>
+    <div id="transcription-box">
+      <div id="transcription"></div>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
